Commented Some HTML

--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -8,7 +8,7 @@
       <meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html">
     </noscript>
 
-    <title>Corporate UI</title>
+    <title>Corporate UI - Dealer Header Code Generator</title>
 
     <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.0-CF/js/corporate-ui.js"></script>
 
@@ -88,42 +88,6 @@
     </script>
   </body>
 </html>
-
-
-
-<!DOCTYPE html>
-
-<html lang="en-GB" ng-app="CorporateUI">
-  <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-    <meta charset="utf-8">
-    <noscript>
-      <meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html">
-    </noscript>
-
-    <title>Corporate UI</title>
-
-    <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.0-CF/js/corporate-ui.js"></script>
-
-    <style>
-
-        .header-is-sticky c-corporate-header .is-dealer .navbar-symbol.should-stick, c-corporate-header.header-is-sticky .navbar-symbol.should-stick  {
-            width: 41px !important;
-            height: 37px !important;
-        }
-
-        .header-is-sticky c-corporate-header .is-dealer .navbar-symbol.should-stick:before, c-corporate-header.header-is-sticky .navbar-symbol.should-stick:before {
-            background-image: url('https://d31jnweo1ynb8u.cloudfront.net/resources/logotype/scania/scania-symbol.svg') !important;
-            background-size: 40px !important;  
-        }
-
-        .container {
-            min-height: 1100px;
-        }
-
-    </style>
-  </head>
-
 
 
 <!--     Additional Fields added below
