Added styles for Component page

--- a/docs/ux-lib.css
+++ b/docs/ux-lib.css
@@ -1,5 +1,25 @@
 /*@import url('https://static.scania.com/resources/logotype/group-brands.css');
 */
+
+iron-doc-viewer .component-name.code.iron-doc-viewer {
+    color: #555555;
+    background-color: #fff;
+    font-size: 40px;
+    display: block;
+}
+
+section#summary p:first-child {
+    padding-top: 30px;
+    font-family: 'Scania Sans Semi Condensed';
+    color: #041442;
+    font-size: 24px;
+}
+
+section#summary h3:first-child {
+    font-family: "Scania Sans Semi Condensed";
+    font-weight: normal;
+}
+
 body.CRStest {background:red !important}
 
 .text-left {text-align:left !important;}
