--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -15,7 +15,8 @@
     
     <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
     <link rel="import" href="scania-doc/scania-doc.html">
-<!--     <link rel="stylesheet" href="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.0-CF/css/ux-library.css"> -->
+
+    <link rel="stylesheet" href="/corporate-ui-docs/ux-lib.css">
 
   </head>
   <body class="scania ux-lib">
