--- a/docs/component/scania-doc/iron-doc-viewer/iron-doc-viewer.html
+++ b/docs/component/scania-doc/iron-doc-viewer/iron-doc-viewer.html
@@ -101,7 +101,7 @@ property.
     <template is="dom-repeat" items="[[_desc]]" as="_descitems">
 
       <div class="container">
-      <marked-element class="markdown" markdown="[[_descitems.markdown]]">
+      <marked-element class="markdown jesper1" markdown="[[_descitems.markdown]]">
         <div class="markdown-html"></div>
       </marked-element>
       </div>
