--- a/docs/ux-lib.css
+++ b/docs/ux-lib.css
@@ -9,14 +9,14 @@
     font-size: 30px;
     display: block;
 }
-
-section#summary p {
-    padding-top: 30px;
-    font-family: 'Scania Sans Semi Condensed';
-    color: #041442;
-    font-size: 24px;
-}
 */
+section#summary {
+    padding-top: 30px;
+/*    font-family: 'Scania Sans Semi Condensed';
+    color: #041442;
+    font-size: 24px;*/
+}
+
 .codeheader {
     cursor: pointer;
 }
