Linking back to static

--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -50,7 +50,7 @@
     <c-corporate-footer></c-corporate-footer>
   
     <script>
-      var html_root = 'https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.0/components',
+      var html_root = 'https://static.scania.com/build/global/3.1.0/components',
       component = CorporateUi.getUrlParameter('c'),
       path = [html_root, component, component].join('/') + '.html';
 
