Explaining Scania Components

--- a/docs/component/index.html
+++ b/docs/component/index.html
@@ -46,7 +46,8 @@
 
     <section class="light">
       <div class="container" ng-cloak>
-        <h2>Components</h2>
+        <h2>Scania<br />Components</h2>
+        <p>Use these pre built components to set the fundamental Scania DNA of your application. This goes both for the graphic design as well as the interaction patterns recognition for our end users.</p>
 
         <div class="main-item">
           <h5>
