--- a/docs/component/index.html
+++ b/docs/component/index.html
@@ -47,7 +47,7 @@
     <section class="light">
       <div class="container" ng-cloak>
         <h2>Scania<br />Components</h2>
-        <p>Use these pre built components to set the fundamental Scania DNA of your application. This goes both for the graphic design as well as the interaction patterns recognition for our end users.</p>
+        <p>Use these pre built components to inherit the fundamental Scania DNA to your application. This goes both for the graphic design as well as the patterns recognition. End users prefere to use established interaction patterns.</p>
 
         <div class="main-item">
           <h5>
