--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -44,7 +44,20 @@
       </primary-items>
     </c-main-navigation>
 
-      <scania-doc></scania-doc>
+    <section class="light">
+      <div class="container-fluid">
+
+        <ul class="nav nav-tabs container">
+          <li><a data-toggle="tab" href="#bootstrap-css-section">Back</a></li>
+          <li class="active"><a data-toggle="tab" href="#">Exemple</a></li>
+          <li><a data-toggle="tab" href="#">About</a></li>
+          <li><a data-toggle="tab" href="#">Code</a></li>                  
+        </ul>
+
+        <scania-doc></scania-doc>
+        
+      </div>
+    </section>  
     </c-main-content>
 
     <c-corporate-footer></c-corporate-footer>
