--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -44,20 +44,19 @@
       </primary-items>
     </c-main-navigation>
 
-    <section class="light">
-      <div class="container-fluid">
+      <section class="light">
+        <div class="container-fluid app">
+          <ul class="nav nav-tabs">
+            <li><a href="/corporate-ui-docs/component/"><i class="icon-arrow-left"></i> Back</a></li>
+            <li class="active"><a data-toggle="tab" href="#">Exemple</a></li>
+            <li><a data-toggle="tab" href="#">About</a></li>
+            <li><a data-toggle="tab" href="#">Code</a></li>                  
+          </ul>
+        </div>    
+      </section>
 
-        <ul class="nav nav-tabs container">
-          <li><a data-toggle="tab" href="#bootstrap-css-section">Back</a></li>
-          <li class="active"><a data-toggle="tab" href="#">Exemple</a></li>
-          <li><a data-toggle="tab" href="#">About</a></li>
-          <li><a data-toggle="tab" href="#">Code</a></li>                  
-        </ul>
+      <scania-doc></scania-doc>
 
-        <scania-doc></scania-doc>
-        
-      </div>
-    </section>  
     </c-main-content>
 
     <c-corporate-footer></c-corporate-footer>
