--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -48,9 +48,9 @@
         <div class="container-fluid app">
           <ul class="nav nav-tabs">
             <li><a href="/corporate-ui-docs/component/"><i class="icon-arrow-left"></i> Back</a></li>
-            <li class="active"><a data-toggle="tab" href="#">Exemple</a></li>
-            <li><a data-toggle="tab" href="#">About</a></li>
-            <li><a data-toggle="tab" href="#">Code</a></li>                  
+            <li class="active"><a data-toggle="tab" href="#example">Example</a></li>
+            <li><a data-toggle="tab" href="#about">About</a></li>
+            <li><a data-toggle="tab" href="#code">Code</a></li>                  
           </ul>
         </div>    
       </section>
