--- a/docs/component/scania-doc/scania-doc.html
+++ b/docs/component/scania-doc/scania-doc.html
@@ -13,25 +13,32 @@
 
 <dom-module id="scania-doc">
 	<template>
-  1 1 1 1 
-  	<hydrolysis-analyzer id="analyzer" src="{{src}}" analyzer="{{_hydroDesc}}" loading="{{_hydroLoading}}"></hydrolysis-analyzer>
+      <div class="tab-content">
+        <div id="example" class="tab-pane fade in active">
+    	   <template is="dom-repeat" items="{{descriptor}}" as="descitem">
 
-      <section>   
-        <template is="dom-repeat" items="{{descriptor}}" as="descitem">
+            <template is="dom-if" if="{{!template}}">
+              <iron-doc-viewer for="{{forItem(descriptor.*, 0, 'subdesc.is')}}" descriptor="{{descitem.subdesc}}"></iron-doc-viewer>
+            </template>
 
-          <template is="dom-if" if="{{!template}}">
-            <iron-doc-viewer for="{{forItem(descriptor.*, 0, 'subdesc.is')}}" descriptor="{{descitem.subdesc}}"></iron-doc-viewer>
+            <template is="dom-if" if="{{template}}">
+              <marked-element class="markdown" markdown="[[descitem.subdesc.desc]]"></marked-element>
+            </template>
+
           </template>
+        </div>
 
-          <template is="dom-if" if="{{template}}">
-            <marked-element class="markdown" markdown="[[descitem.subdesc.desc]]"></marked-element>
-          </template>
+        <div id="about" class="tab-pane fade in active">
+           <hydrolysis-analyzer id="analyzer" src="{{src}}" analyzer="{{_hydroDesc}}" loading="{{_hydroLoading}}"></hydrolysis-analyzer>
+        </div>
 
-        </template>
-      </section>
-    </template>
-2 2 2 2 2
-	</template>
+        <div id="code" class="tab-pane fade in active">
+           <hydrolysis-analyzer id="analyzer" src="{{src}}" analyzer="{{_hydroDesc}}" loading="{{_hydroLoading}}"></hydrolysis-analyzer>
+        </div>  
+        
+     </div>      
+  </template>
+</template>
 
 	<script>
 		Polymer({
