--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -18,6 +18,13 @@
 
     <link rel="stylesheet" href="/corporate-ui-docs/ux-lib.css">
 
+    <script>
+     var tabs = document.querySelectorAll('.nav-tabs a')
+       for(var i=0; i<tabs.length; i++) {
+         new Tab(tabs[i])
+       }
+    </script>
+
   </head>
   <body class="scania ux-lib">
 
