--- a/docs/component/scania-doc/scania-doc.html
+++ b/docs/component/scania-doc/scania-doc.html
@@ -28,14 +28,14 @@
           </template>
         </div>
 
-        <div id="about" class="tab-pane fade in active">
+        <div id="about" class="tab-pane fade">
            <hydrolysis-analyzer id="analyzer" src="{{src}}" analyzer="{{_hydroDesc}}" loading="{{_hydroLoading}}"></hydrolysis-analyzer>
         </div>
 
-        <div id="code" class="tab-pane fade in active">
+        <div id="code" class="tab-pane fade">
            <hydrolysis-analyzer id="analyzer" src="{{src}}" analyzer="{{_hydroDesc}}" loading="{{_hydroLoading}}"></hydrolysis-analyzer>
         </div>  
-        
+
      </div>      
   </template>
 </template>
