--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -54,16 +54,16 @@
       <section class="light">
         <div class="container-fluid app">
           <ul class="nav nav-tabs">
-            <li><a href="/corporate-ui-docs/component/"><i class="icon-arrow-left"></i> Back</a></li>
+            <li><a href="/corporate-ui-docs/component/"><i class="icon-angle-left"></i> Back</a></li>
             <li class="active"><a data-toggle="tab" href="#example">Example</a></li>
             <li><a data-toggle="tab" href="#about">About</a></li>
             <li><a data-toggle="tab" href="#code">Code</a></li>                  
-          </ul>
-        </div>    
+          </ul>   
+
+          <scania-doc></scania-doc>
+
+        </div> 
       </section>
-
-      <scania-doc></scania-doc>
-
     </c-main-content>
 
     <c-corporate-footer></c-corporate-footer>
