--- a/docs/component/scania-doc/demo-component.html
+++ b/docs/component/scania-doc/demo-component.html
@@ -42,16 +42,17 @@
 				}
 			}
 		</style>
-
-		<div class$="{{demoActive}}">
-			<div id="demotemplate" class="demo-template">
+        <div id="example" class="tab-pane fade in active">
+			<div class$="{{demoActive}}">
+				<div id="demotemplate" class="demo-template">
+				</div>
+				<div class="container code-template">
+					<marked-element class="markdown" on-marked-render-complete="_markedproc" markdown="[[democode]]">
+	        			<div class="markdown-html"></div>
+	      			</marked-element>
+				</div>
 			</div>
-			<div class="container code-template">
-				<marked-element class="markdown" on-marked-render-complete="_markedproc" markdown="[[democode]]">
-        			<div class="markdown-html"></div>
-      			</marked-element>
-			</div>
-		</div>
+		</div>	
 	</template>
 	<script>
 		Polymer({
@@ -81,7 +82,7 @@
         	    var elements = this.querySelectorAll('pre'),
         	                   $this = this;
 	
-        	    $(elements).wrap('<div class="prewrapper"></div>');
+        	    $(elements).wrap('<div id="code" class="tab-pane fade"><div class="prewrapper"></div></div>');
 
         	    $('code', elements)[0].textContent = '  <link rel="import" href="' + path + '">\n' + $('code', elements)[0].textContent;
 	
