--- a/docs/component/scania-doc/demo-component.html
+++ b/docs/component/scania-doc/demo-component.html
@@ -82,7 +82,7 @@
         	    var elements = this.querySelectorAll('pre'),
         	                   $this = this;
 	
-        	    $(elements).wrap('<div id="code" class="tab-pane fade"><div class="prewrapper"></div></div>');
+        	    $(elements).wrap('<div id="code" class="prewrapper tab-pane fade"></div>');
 
         	    $('code', elements)[0].textContent = '  <link rel="import" href="' + path + '">\n' + $('code', elements)[0].textContent;
 	
