Moved Demo component Tab Content

--- a/docs/component/scania-doc/iron-doc-viewer/iron-doc-viewer.html
+++ b/docs/component/scania-doc/iron-doc-viewer/iron-doc-viewer.html
@@ -107,8 +107,10 @@ property.
             </div>
           </div>  
           <template is="dom-if" if="[[_descitems.demo]]">
-            <demo-component data="[[_descitems.demo]]">
-            </demo-component>
+            <div id="example" class="tab-pane fade in active">
+              <demo-component data="[[_descitems.demo]]">
+              </demo-component>
+            </div>  
           </template>
           
         </template>
