--- a/docs/component/scania-doc/demo-component.html
+++ b/docs/component/scania-doc/demo-component.html
@@ -43,7 +43,7 @@
 			}
 		</style>
 		<div class$="{{demoActive}}">
-			<div id="demotemplate" class="demo-template">
+			<div id="demotemplate" class="demo-template public">
 			</div>
 			<div class="container code-template">
 				<marked-element class="markdown" on-marked-render-complete="_markedproc" markdown="[[democode]]">
