Rearanged Iron Viewer

--- a/docs/component/scania-doc/demo-component.html
+++ b/docs/component/scania-doc/demo-component.html
@@ -42,7 +42,7 @@
 				}
 			}
 		</style>
-		<div class$="{{demoActive}}">
+		<div class$="{{demoActive}} public">
 			<div id="demotemplate" class="demo-template public">
 			</div>
 			<div class="container code-template">
