--- a/docs/component/scania-doc/iron-doc-viewer/iron-doc-viewer.html
+++ b/docs/component/scania-doc/iron-doc-viewer/iron-doc-viewer.html
@@ -106,7 +106,7 @@ property.
       </div> 
 
       <div id="example" class="tab-pane fade in active">
-        <section id="summary" class$="{{for}}" hidden$="[[!descriptor.desc]]">
+        <section id="examples" class$="{{for}}" hidden$="[[!descriptor.desc]]">
           <div class="container public">
             <template is="dom-repeat" items="[[_desc]]" as="_descitems">
            
