Full bleed for demo page

--- a/docs/component/scania-doc/iron-doc-viewer/iron-doc-viewer.html
+++ b/docs/component/scania-doc/iron-doc-viewer/iron-doc-viewer.html
@@ -171,7 +171,7 @@ property.
     <section id="summary" class$="{{for}}" hidden$="[[!descriptor.desc]]">
     <template is="dom-repeat" items="[[mainDesc]]" as="maindescitems">
 
-      <div class="container">
+      <div class="container-fluid">
       <marked-element class="markdown" markdown="[[maindescitems.markdown]]">
         <div class="markdown-html"></div>
       </marked-element>
