Demo Page with tabs

--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -59,21 +59,24 @@
             <li><a data-toggle="tab" href="#usage">About</a></li>
             <li><a data-toggle="tab" href="#code">Code</a></li>                  
           </ul>   
-          
-          <div id="example" class="tab-pane fade in active">
-            <scania-doc></scania-doc>
-          </div>
 
-          <div id="usage" class="tab-pane fade">
-            <h3>Scania Components</h3>
-            <p>Use this component where applicable. If you do need for example a main navigation in your application, use the one found among these components. These are all signed of by the Scania Headquarters and there is no reason to create something similar. Do not re-invent the wheel.</p>
-          </div>
+          <div class="tab-content">
 
-          <div id="code" class="tab-pane fade">
-            <h3>Copy and Paste the code</h3>
-            <p>In connection to each variation of a component there is a CODE button. Copy that code and paste it in your template page.</p>
-          </div>
+            <div id="example" class="tab-pane fade in active">
+              <scania-doc></scania-doc>
+            </div>
 
+            <div id="usage" class="tab-pane fade">
+              <h2>Scania Components</h2>
+              <p>Use this component where applicable. If you do need for example a main navigation in your application, use the one found among these components. These are all signed of by the Scania Headquarters and there is no reason to create something similar. Do not re-invent the wheel.</p>
+            </div>
+
+            <div id="code" class="tab-pane fade">
+              <h2>Copy and Paste the code</h2>
+              <p>In connection to each variation of a component there is a CODE button. Copy that code and paste it in your template page.</p>
+            </div>
+
+          </div>
         </div> 
       </section>
     </c-main-content>
@@ -95,5 +98,6 @@
     </script>
 
     <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.0-CF/js/ux-library.js"></script>
+    <script src="/corporate-ui-docs/ux-lib.js"></script>    
   </body>
 </html>
