--- a/docs/component/scania-doc/iron-doc-viewer/iron-doc-viewer.html
+++ b/docs/component/scania-doc/iron-doc-viewer/iron-doc-viewer.html
@@ -106,7 +106,7 @@ property.
       </marked-element>
       </div>
       <template is="dom-if" if="[[_descitems.demo]]">
-        <demo-component data="[[_descitems.demo]] public">
+        <demo-component data="[[_descitems.demo]]">
         </demo-component>
       </template>
       
@@ -127,7 +127,7 @@ property.
     </template>
 
     <template is="dom-if" if="{{forIs}}">
-      <div class="container">
+      <div class="container-fluid">
     <nav id="api">
       <div class="text-center"><h3 on-tap="_handleTap"><i class="icon-gears"></i> API Reference <i id="apiicon" class="icon-angle-down"></i></h3></div>
     </nav>
