--- a/docs/component/scania-doc/iron-doc-viewer/iron-doc-viewer.html
+++ b/docs/component/scania-doc/iron-doc-viewer/iron-doc-viewer.html
@@ -106,8 +106,9 @@ property.
       </marked-element>
       </div>
       <template is="dom-if" if="[[_descitems.demo]]">
-        <demo-component data="[[_descitems.demo]]">
-        </demo-component>
+        <div class="public zone">
+          <demo-component data="[[_descitems.demo]]"></demo-component>
+        </div>  
       </template>
       
     </template>
@@ -127,7 +128,7 @@ property.
     </template>
 
     <template is="dom-if" if="{{forIs}}">
-      <div class="container-fluid">
+      <div class="container">
     <nav id="api">
       <div class="text-center"><h3 on-tap="_handleTap"><i class="icon-gears"></i> API Reference <i id="apiicon" class="icon-angle-down"></i></h3></div>
     </nav>
