Added tab action

--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -54,7 +54,7 @@
       <section class="light">
         <div class="container-fluid app">
           <ul class="nav nav-tabs">
-            <li><a href="/corporate-ui-docs/component/"><i class="icon-angle-left"></i> Back</a></li>
+            <li><a data-toggle="tab" href="/corporate-ui-docs/component/"><i class="icon-angle-left"></i> Back</a></li>
             <li class="active"><a data-toggle="tab" href="#example">Example</a></li>
             <li><a data-toggle="tab" href="#usage">About</a></li>
             <li><a data-toggle="tab" href="#html-code">Code</a></li>                  
