--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -58,7 +58,9 @@
             <li class="active"><a data-toggle="tab" href="#example">Example</a></li>
             <li><a data-toggle="tab" href="#usage">About</a></li>
             <li><a data-toggle="tab" href="#html-code">Code</a></li>                  
-          </ul>   
+          </ul>
+        </div>
+        <div class="container-fluid">     
 
           <div class="tab-content">
 
